# RAIL

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  REVIEW.md  REVIEW_V1.md  STARTER_PROMPT.md  package-lock.json  package.json
.claude/: settings.json
.claude/commands/: phase-review.md  phase-start.md
.claude/hooks/: docs_protection.py
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CONVENTIONS.md  DECODERS.md  DSP.md  HARDWARE.md  PERF.md  PRD.md  README.md  SIGNALS.md  TECH_STACK.md  TIMELINE.md
docs/assets/: demo_iq.sigmf-data  demo_iq.sigmf-meta
scripts/: gen-ipc-event-names.mjs
shared/: ipc_event_names.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: bookmarks.rs  error.rs  lib.rs  perf_emit.rs  replay.rs  scanner.rs
src-tauri/src/capture/: mod.rs  session.rs  sigmf.rs  tmp.rs  wav.rs
src-tauri/src/dsp/: classifier.rs  fft.rs  filter.rs  input.rs  mod.rs  waterfall.rs
src-tauri/src/dsp/demod/: am.rs  fm.rs  mod.rs  ssb.rs
src-tauri/src/hardware/: ffi.rs  mod.rs  stream.rs
src-tauri/src/ipc/: capture_cmd.rs  commands.rs  dsp_task.rs  events.rs  mod.rs  replay_cmd.rs
src/components/AudioControls/: HoverSlider.tsx  index.tsx
src/components/BandGuideAxis/: index.tsx
src/components/BandGuideControls/: index.tsx
src/data/: bands.ts
src/hooks/: useAudio.ts  useKeyboardTuning.ts  useWaterfall.ts
src/ipc/: commands.ts  events.ts
src/store/: bandGuide.ts  bookmarks.ts  capture.ts  radio.ts  replay.ts  scanner.ts  session.ts
(+17 files in other folders)
